text align fixed

--- a/src/Components/header/style.css
+++ b/src/Components/header/style.css
@@ -5,7 +5,7 @@
 
 .navbar {
     position: initial;
-    padding: -1px 0;
+    padding: 12px 0px !important;
     background: rgba(18, 7, 49, 0.47);
     backdrop-filter: blur(10px);
     border-radius: 0px 0px 40px 40px;
@@ -87,9 +87,9 @@ ul.navbar-nav {}
     }
 }
 
-ul.navbar-nav li.nav-item {
+/* ul.navbar-nav li.nav-item {
     margin-right: 2px;
-}
+} */
 
 ul.navbar-nav li.nav-item:last-child {
     margin-right: 0;
@@ -153,7 +153,7 @@ button:hover span {
     border-radius: 32px;
 
     color: white;
-    margin-top: 5px;
+    /* margin-top: 5px; */
     align-items: center;
     font-family: inherit;
     width: 100%;
@@ -169,7 +169,7 @@ button:hover span {
     border-radius: 32px;
 
     color: white;
-    margin-top: 5px;
+    /* margin-top: 5px; */
     align-items: center;
     font-family: inherit;
     width: 100%;
@@ -184,7 +184,7 @@ button:hover span {
     border-radius: 32px;
     border: 0px solid;
     color: rgb(0, 0, 0);
-    margin-top: 5px;
+    /* margin-top: 5px; */
     align-items: center;
     width: 100%;
 
@@ -199,7 +199,7 @@ button:hover span {
     border-radius: 32px;
     border: 0px solid;
     color: rgb(0, 0, 0);
-    margin-top: 5px;
+    /* margin-top: 5px; */
     align-items: center;
     width: 100%;
 
@@ -357,9 +357,4 @@ button:hover span {
         display: flex;
         justify-content: left !important;
     }
-}
-
-.hdr{
-    display: flex !important;
-    align-items: center !important;
 }
