--- a/src/Components/home/style.css
+++ b/src/Components/home/style.css
@@ -1964,12 +1964,12 @@ filter: blur(120px) !important;
   }
 
   .dpdown {
-    margin-top: 16px !important;
+    /* margin-top: 16px !important; */
   }
   .walletbtn{
     padding: 10px 8px  !important;
     font-size: 12px !important;
-    margin-top: 14px !important;
+    /* margin-top: 14px !important; */
   }
 }
 
